--- a/miniapp/pages/home/home.wxss
+++ b/miniapp/pages/home/home.wxss
@@ -15,8 +15,24 @@
   border-radius: 5px;
 }
 
-.test{
-  background-color: var(--theme-colour-thicker);
-  width: 400rpx;
-  height: 300rpx;
+.logo{
+  height:100rpx;
+  margin-left: 50rpx;
+}
+.posts{
+  height:400rpx;
+  width:750rpx;
+  align-items:center;
+  justify-content:space-around;
+}
+scroll-view{
+  height:250rpx;
+  width:750rpx;
+  flex-direction: row-reverse;
+  justify-content:space-around;
+}
+scroll-view image{
+  height:250rpx;
+  margin:10rpx;
+  align-items:center;
 }
