--- a/miniapp/pages/menu/product/product.scss
+++ b/miniapp/pages/menu/product/product.scss
@@ -40,3 +40,16 @@
   z-index: 100;
   position: absolute;
 }
+.button{
+  position: absolute;
+  transform: translate(960%,15%);
+  z-index: 1000;
+  width: 70rpx;
+  height: 70rpx;
+ image{
+   display: flex;
+   transform: translate(-42%,0%);
+   width: 70rpx;
+   height: 70rpx;
+ }
+}
