--- a/miniapp/pages/menu/menu.wxss
+++ b/miniapp/pages/menu/menu.wxss
@@ -1,1 +1,115 @@
 /* pages/menu/menu.wxss */
+.search-bar {
+  margin: 20rpx;
+}
+.search-input {
+  background-color: #e0dddd;
+  height: 60rpx;
+  border-radius: 30rpx;
+  padding-left: 80rpx;
+  left: auto;
+}
+.icon-search{
+  position: absolute;
+  /* top: 50%; */
+  /* transform: translateY(-10%); */
+  left: 30rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+
+.objectView {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.cehuaDa {
+  width: 200rpx;
+  height: 85%;
+  /* position: absolute; */
+  left: 0;
+  z-index: 10;
+  display: flex;
+}
+
+.sideslipMenu {
+  background-color: black;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
+  z-index: 9;
+}
+
+.sideslipMenuItemlist {
+  width: 200rpx;
+  background-color: #f0eeee;
+  /* opacity: 1; */
+  position: absolute;
+  /* left: 0;
+  top: 0; */
+  z-index: 10;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 30rpx;
+}
+
+.sideslipMenuItem {
+  font-size: 100rpx;
+}
+
+.img{
+  width: 100%;  
+  margin-bottom: 0px;
+  height: 100px;
+  padding-top: 0px;
+}
+.product-container {  
+  display: flex;   
+  padding: 10px;  
+  border: 1px solid rgb(192, 190, 190); 
+  position: relative;
+}  
+  
+.product-image {  
+  width: 100px;  
+  height: 100px;  
+  margin-right: 10px;  
+  margin-left: 100px;
+}  
+  
+.product-info {  
+  flex: 1;   
+  display: flex;  
+  flex-direction: column;  
+  align-items: flex-start;  
+}  
+  
+.product-name {  
+  font-size: 20px;  
+  margin-top: 0px; 
+  font-weight: bold;  
+  margin-bottom: 20px;  
+}  
+  
+.product-price {  
+  font-size: 14px;
+  color: #f60;  
+}
+.product-add {
+  position: absolute;
+  bottom: 10px; 
+  right: 10px; 
+  width: 20px; 
+  height: 20px;   
+}
+
+.cart-icon {  
+  position: fixed;  
+  bottom: 100px; 
+  right: 20px;  
+  width: 40px;   
+  height: 40px;  
+}
