--- a/miniapp/pages/menu/product/product.scss
+++ b/miniapp/pages/menu/product/product.scss
@@ -53,3 +53,36 @@
    height: 70rpx;
  }
 }
+
+.container {
+  padding: 20rpx;
+}
+.product-list, .cart {
+  margin-bottom: 20rpx;
+  font-size: 80rpx;
+}
+.product-item, .cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10rpx;
+}
+.total {
+  font-size: 60rpx;
+  font-weight: bold;
+  text-align: right;
+}
+.lijizhifu{
+  width: 300rpx;
+  height: 100rpx;
+  position: absolute;
+  z-index: 100;
+  transform: translate(10%,1280%);
+}
+.gouwuche{
+  width: 300rpx;
+  height: 100rpx;
+  position: absolute;
+  z-index: 100;
+  transform: translate(140%,1280%);
+}
