--- a/miniapp/pages/menu/product/product.wxml
+++ b/miniapp/pages/menu/product/product.wxml
@@ -29,3 +29,25 @@ interval="2000"
   <text>2024-01-28 00:00:00\n</text>
   <text>资质保障: \n</text>
 </view>
+<view class="container">
+    <view class="product-list">
+        <block wx:for="{{products}}" wx:key="id">
+            <view class="product-item">
+                <text> ￥{{item.price}}</text>
+                <button bindtap="removeFromCart" data-id="{{item.id}}">-</button>
+                <view wx:if="{{total >= 0}}"> 
+                <view class="total">{{total}}</view>
+                </view>
+                <view wx:else>
+                  <view class="total">0</view>
+                  
+               </view>
+                <button bindtap="addToCart" data-id="{{item.id}}">+</button>
+            </view>
+        </block>
+        
+    </view>
+   
+</view>
+<view class="lijizhifu"><button >立即支付</button></view>
+<view class="gouwuche"><button >加入购物车</button></view>
