--- a/miniapp/pages/userCenter/user.wxml
+++ b/miniapp/pages/userCenter/user.wxml
@@ -1,4 +1,14 @@
-<!--pages/userProfile/user.wxml-->
-<text>pages/userProfile/user.wxml</text>
+<t-cell class="custom-cell"  title="单行标题" hover arrow />
+<t-cell title="单行标题" hover required arrow />
+<t-cell title="单行标题" hover arrow ariaLabel="单行标题，有16条消息">
+  <t-badge count="{{16}}" slot="note" />
+</t-cell>
+<t-cell title="单行标题" hover>
+  <t-switch defaultValue="{{true}}" slot="note" />
+</t-cell>
+<t-cell title="单行标题" hover note="辅助信息" arrow />
+<t-cell title="单行标题" hover arrow leftIcon="lock-on" bordered="{{false}}" />
 
-
+<view class="array">
+  {{messages}}
+</view>
