--- a/miniapp/custom-tab-bar/index.wxml
+++ b/miniapp/custom-tab-bar/index.wxml
@@ -1,9 +1,9 @@
-<view class="wrapper">
-  <t-tab-bar   t-class="t-tab-bar"  split="{{false}}">
-    <t-tab-bar-item wx:for="{{list}}" wx:key="id" badge-props="{{ item.props }}"  
-    icon="{{item.icon}}" data-path="{{item.path}}" data-value="{{item.value}}" bindtap="onTabItemTap">
+
+<t-tab-bar class="custom-tab-bar" class="custom-tar-bar" t-class="t-tab-bar"  split="{{false}}"  bindchange="handleChange">
+    <t-tab-bar-item class='custom-tar-bar-item' wx:for="{{list}}" wx:key="index" badge-props="{{ item.props }}"  
+    icon="{{item.icon}}" data-path="{{item.path}}" data-value="{{item.value}}">
       {{item.label}}
     </t-tab-bar-item>
 </t-tab-bar>
-</view>
+
 
