--- a/miniapp/pages/menu/menu.wxml
+++ b/miniapp/pages/menu/menu.wxml
@@ -6,7 +6,7 @@
     <input class="search-input" type="text" placeholder="输入搜索内容"/>
   </view>
 <!-- 左侧边栏 -->
-  <view class="cehuaDa">
+  <!-- <view class="cehuaDa">
     <view class="sideslipMenuItemlist">  
       <block wx:for="{{sideslipMenuArr}}" wx:key="index">  
         <view class="sideslipMenuItem" catchtap="itemClick" data-index="{{index}}">  
@@ -14,19 +14,50 @@
         </view>  
       </block>  
     </view>
-  </view>
+  </view> -->
+  <!-- TDesign侧边栏 -->
+<view class="custom-navbar">
+  <t-navbar title="TDesign" leftArrow />
+</view>
+<view class="side-bar-wrapper" style="height: calc(100vh - {{navbarHeight}}px)">
+  <t-side-bar value="{{sideBarIndex}}" bind:change="onSideBarChange">
+    <t-side-bar-item
+      wx:for="{{categories}}"
+      wx:key="label"
+      value="{{item.value || index}}"
+      label="{{item.label}}"
+
+      badge-props="{{item.badgeProps}}"
+    />
+  </t-side-bar>
+  <!-- <scroll-view class="content" scroll-y scroll-with-animation scroll-top="{{scrollTop}}"        bind:scroll="onScroll">
+    <view wx:for="{{categories}}" wx:key="label" class="section">
+      <view class="title">{{item.title || item.label}}</view> 
+      <t-grid column="{{3}}" border="{{false}}">
+        <block wx:for="{{item.items}}" wx:key="index" wx:for-item="cargo">
+          <t-grid-item
+            text="{{cargo.label}}"
+            image="{{cargo.image}}"
+            image-props="{{ { shape: 'round', lazy: true } }}"
+          >
+          </t-grid-item>
+        </block>
+      </t-grid>
+    </view>
+  </scroll-view> -->
   <!-- 右侧商品栏 -->
   <view class="product-container">  
     <image src="../img/temp/market-1.png" class="product-image"></image>  
-    <image src="../img/icon/ic_img_add.png" class="product-add"></image>
     <view class="product-info">  
       <text class="product-name">野生莲藕</text>  
       <text class="product-price">¥888</text> 
-      
-  </view>  
-  <image src="../img/icon/ic-img-market.png" class="cart-icon"></image>
+      <image src="../img/icon/ic_img_add.png" class="product-add"></image>
+  </view>
 </view>
 
+    
+  <image src="../img/icon/ic-img-market.png" class="cart-icon"></image>
+</view>
 
 </view>
 
