--- a/miniapp/pages/userCenter/user.wxml
+++ b/miniapp/pages/userCenter/user.wxml
@@ -5,7 +5,7 @@
 <view class="avatar-container">  
       <t-avatar class="my-avatar" image="{{avatar}}" size="large" />
       <view class="userprofile"> 
-        <view class="userName">Max</view>
+        <view class="userName">{{nickName}}</view>
         <view class="userDetail">帅气温柔男大</view>
       </view>
 </view>
@@ -26,4 +26,7 @@
 
 <view class="button-example">
   <t-button theme="primary" size="large" bind:tap="getWxcode">获取code</t-button>
+</view>
+<view class="button-example">
+  <t-button theme="primary" size="large" bind:tap="getInformation">获取信息</t-button>
 </view>
