--- a/miniapp/pages/userCenter/discountTicket/discountTicket.wxml
+++ b/miniapp/pages/userCenter/discountTicket/discountTicket.wxml
@@ -1,2 +1,47 @@
 <!--pages/userCenter/discountTicket/discountTicket.wxml-->
-<text>pages/userCenter/discountTicket/discountTicket.wxml</text>
+<view class="all">
+  <view class="block">
+    <t-navbar
+      t-class-placeholder="t-navbar-placeholder"
+      t-class-content="t-navbar-content"
+      class="block"
+      title="优惠券"
+      left-arrow
+      bind:go-back="handleBack"/>
+  </view>
+  <view class="card">
+  <t-cell-group theme="card" class="card" style="margin-bottom: 40px;">
+    <t-cell class="card">
+      <view slot="title">
+        <view class="title">品类券</view>
+        <view class="sub-title">折扣金额：减50元</view>
+        <view class="sub-title">使用条件：满15</view>
+        <view class="sub-title">有效期至：2024-8-12</view>
+      </view>
+    </t-cell> 
+  </t-cell-group>
+  
+  <t-cell-group theme="card" class="card" style="margin-bottom: 40px;">
+    <t-cell>
+      <view slot="title">
+        <view class="title">品类券</view>
+        <view class="sub-title">折扣金额：减50元</view>
+        <view class="sub-title">使用条件：满15</view>
+        <view class="sub-title">有效期至：2024-8-12</view>
+      </view>
+    </t-cell> 
+  </t-cell-group>
+  
+  <t-cell-group theme="card" class="card" style="margin-bottom: 40px;">
+    <t-cell>
+      <view slot="title">
+        <view class="title">品类券</view>
+        <view class="sub-title">折扣金额：减50元</view>
+        <view class="sub-title">使用条件：满15</view>
+        <view class="sub-title">有效期至：2024-8-12</view>
+      </view>
+    </t-cell> 
+  </t-cell-group>
+</view>
+
+</view>
